Remove config-cache JPMS argument from daemon
This one is probably coming from user code in tests and not from Gradle internals.
This should be worked around in tests instead.