@@ -51,7 +51,6 @@ public class JpmsConfiguration {
             "--add-opens", "java.prefs/java.util.prefs=ALL-UNNAMED", // required by JavaObjectSerializationCodec.kt
             "--add-opens", "java.base/java.nio.charset=ALL-UNNAMED", // required by BeanSchemaKt
             "--add-opens", "java.base/java.net=ALL-UNNAMED", // required by JavaObjectSerializationCodec
-            "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED", // serialized from groovy.lang.Reference
             "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED" // serialized from org.gradle.internal.file.StatStatistics$Collector
         ));
         gradleDaemonJvmArgs.addAll(configurationCacheJpmsArgs);
